--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -30,7 +30,7 @@
   "app.preseteditdesc": "You can view, change name and delete the saved presets for the chosen theme here.",
   "app.presetdeletetext": "This will delete the saved '<b>%{preset}</b>' preset. <br/><br/><b>IMPORTANT:</b> This will affect any existing courses using this preset.",
   "app.presetnameplaceholder": "Enter new name",
-  "app.productname": "Adapt authoring tool",
+  "app.productname": "Blink Authoring",
   "app.loading": "Loading",
   "app.rememberme": "Remember me",
   "app.ok": "OK",
@@ -132,7 +132,7 @@
   "app.newpassword": "New password",
   "app.confirmpassword": "Confirm password",
   "app.passwordtip": "Enter a new password below. The most secure passwords have a mix of numbers, letters (including capitals) and other characters.",
-  "app.forgotpasswordblurb": "Enter the email address associated with your Adapt account, then click Continue.",
+  "app.forgotpasswordblurb": "Enter the email address associated with your Blink Authoring account, then click Continue.",
   "app.forgotpasswordfooter": "Contact %{supportContact} for help with restoring access to your account.",
   "app.anadmin": "an administrator",
   "app.hasyouremailchanged": "Has your email address changed?",
@@ -269,12 +269,12 @@
   "app.menupicker": "Menu picker",
   "app.menumanagement": "Manage Available Menus",
   "app.tenantmanagement": "Tenant Management",
-  "app.emailinvitesubject": "Welcome to Adapt",
+  "app.emailinvitesubject": "Welcome to Blink Authoring",
   "app.emailinvitebody": "A new account has been set up for you at %{rootUrl}. Please <a href='%{resetUrl}' target='_blank'>click here</a> to reset your password.<br><br>If you did not request this account, please contact %{inviter} for more information.",
-  "app.emailadminpasswordchangesubject": "Your Adapt password has been changed",
-  "app.emailadminpasswordchangebody": "The password for your <a href='%{rootUrl}' target='_blank'>Adapt authoring tool</a> account has been successfully changed. If you did not request this, please contact an administrator.",
-  "app.emailforgottenpasswordsubject": "Reset Your Adapt Password",
-  "app.emailforgottenpasswordbody": "<p>We've received a request to reset the password for your <a href='%{rootUrl}' target='_blank'>Adapt authoring tool</a> account.</p><p>If you weren't expecting this email, don't worry! You can safely ignore it. Otherwise, please click the button below.</p>",
+  "app.emailadminpasswordchangesubject": "Your Blink Authoring password has been changed",
+  "app.emailadminpasswordchangebody": "The password for your <a href='%{rootUrl}' target='_blank'>Blink Authoring</a> account has been successfully changed. If you did not request this, please contact an administrator.",
+  "app.emailforgottenpasswordsubject": "Reset Your Blink Authoring Password",
+  "app.emailforgottenpasswordbody": "<p>We've received a request to reset the password for your <a href='%{rootUrl}' target='_blank'>Blink Authoring</a> account.</p><p>If you weren't expecting this email, don't worry! You can safely ignore it. Otherwise, please click the button below.</p>",
   "app.edittenant": "Edit Tenant",
   "app.addtenant": "Add Tenant",
   "app.tenant": "Tenant",
@@ -331,8 +331,8 @@
   "app.backtoprojects": "Back to courses",
   "app.visitpluginhomepage": "Visit plugin homepage",
   "app.greeting": "Hi",
-  "app.emaillogotext": "ADAPT",
-  "app.emailfooter": "Sent by Adapt Learning.",
+  "app.emaillogotext": "Blink Authoring",
+  "app.emailfooter": "Sent by Blink Authoring.",
   "app.importing": "Importing...",
   "app.none": "None",
   "app.importframeworkfileuploaded": "File has been uploaded",
